removed invalid character

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <section class="about">
 	<p clas="intro">Thanks for visiting! This is the personal website, and digital playground, of Frederik Van Geloven.</p> 
 	<p>You might notice that things are quite bare bones right now. That's because I'm focussing on my day job, my one year old son, and enjoying winter in Vermont. Occasionally, I'll drop in to experiment with some new technique I'm learning about. So if things look off, that might be why.</p>
-	<p>This version of Made by Fred is built with Jekyll and hosted on Github Pages. Previous Ñ more elaborate Ñ versions have run on Wordpress or were just hand coded from scratch. Since there's no blog or journal here right now, you might want to check out some of my archived blogs (<a href="http://madebyfred.wordpress.com">Made by Fred</a> or even older <a href="http://thedrawingfarm.blogspot.com">The Drawing Farm</a>.</p>
+	<p>This version of Made by Fred is built with Jekyll and hosted on Github Pages. Previous, more elaborate, versions have run on Wordpress or were just hand coded from scratch. Since there's no blog or journal here right now, you might want to check out some of my archived blogs: <a href="http://madebyfred.wordpress.com">Made by Fred</a> or even older <a href="http://thedrawingfarm.blogspot.com">The Drawing Farm</a>.</p>
 </section>
 <section class="contact">
 	<p>For more frequent updates, or if you'd like to get in touch with me:</p>
