changed Felix's age and the season

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <div class="wrapper">
 	<section class="about">
 		<p class="intro">Thanks for visiting! This is the personal website, and digital playground, of Frederik Van Geloven.</p> 
-		<p>You might notice that things are quite bare bones right now. That's because I'm focussing on my day job, my one year old son, and enjoying winter in Vermont. Occasionally, I'll drop in to experiment with some new technique I'm learning about. So if things look off, that might be why.</p>
+		<p>You might notice that things are quite bare bones right now. That's because I'm focussing on my day job, my almost-two year old son, and enjoying fall in Vermont. Occasionally, I'll drop in to experiment with some new technique I'm learning about. So if things look off, that might be why.</p>
 		<p>This version of Made by Fred is built with Jekyll and hosted on Github Pages. Previous, more elaborate, versions have run on Wordpress or were just hand coded from scratch. Since there's no blog or journal here right now, you might want to check out some of my archived blogs: <a href="http://madebyfred.wordpress.com">Made by Fred</a> or even older <a href="http://thedrawingfarm.blogspot.com">The Drawing Farm</a>.</p>
 		<p>For more frequent updates, or if you want to get in touch, you can find me on Twitter.
 			<a href="https://twitter.com/{{ site.twitter_username }}">
