further clean up of index page and first portfolio draft in posts folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@ layout: default
 	
 	<section class="profile">
 		<h2 class="section-title">Info</h2>
-		<p>Creative Director and designer with many years of experience planning, designing, and building web sites. Fusing an educational background in communication studies and professional experience as a designer/developer, to provide a comprehensive profile as a web professional.</p>
+		<p><span class="name">Frederik Van Geloven</span> is a
+			<ul>
+				<li>designer,</li>
+				<li>creative director,</li>
+				<li>and communication geek.</li>
+			</ul>
+		</p>
 	</section>
 	
 	<secion class="portfolio">
