--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ layout: default
 -->
 		
 	<section class="contact">
+		<h2 class="section-title">Contact</h2>
 		<p>For more frequent updates, or if you'd like to get in touch with me:</p>
 	  		<ul class="social-media-list">
 	          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
