clean up profile section, colors and typography

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@ layout: default
 	<section class="profile">
 		<h2 class="section-title">Frederik Van Geloven</h2>
 		<div class="info">
+			<p>designer + creative director</p>
 			<img src="images/fall2015_square.jpg" alt="profile picture"/>
-			<p>is a</p>
+
+<!--
 			<ul>
 				<li>designer</li><span>+</span>
 				<li>creative director</li>
 			</ul>
+-->
 	</section>
 	
 	<section class="portfolio">
