updated portfolio section and index

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 ---
-layout: default
+layout: home
 ---
 <!-- <div class="wrapper"> -->
 	
-	<section class="profile">
-		<h2 class="section-title">Frederik Van Geloven</h2>
+	<section id="profile">
+		<h2 class="page-title">Frederik Van Geloven</h2>
 		<div class="info">
-			<p>designer + creative director</p>
+			<p>designer - creative director</p>
+			<p class="type">& front-end developer</p>
 			<img src="images/fall2015_square.jpg" alt="profile picture"/>
 
 <!--
@@ -17,7 +18,7 @@ layout: default
 -->
 	</section>
 	
-	<section class="portfolio">
+	<section id="portfolio">
 		<h2 class="section-title">Portfolio</h2>
 		<ul class="entries">
 			{% for post in site.posts %}
@@ -25,8 +26,8 @@ layout: default
 		  <li>
 		    <a href="{{ post.url }}">
 			    <h3>{{ post.title }}</h3>
-		      <img src="{{ post.image }}" />
-					<p class="description">{{ post.description }}</p>
+			    <img src="{{ post.image }}" />
+<!-- 					<p class="description">{{ post.description }}</p> -->
 		    </a>
 		  </li>
 		 
@@ -34,13 +35,13 @@ layout: default
 		</ul>
 	</section>
 
-	<section class="experience">
+	<section id="experience">
 		<h2 class="section-title">Experience</h2>
 		<ul>
 			<li>
 				<span class="date">2015-present</span>
 				<h3>Creative Director - <a class="company" href="http://vermontegov.com">Vermont Information Consortium</a></h3>
-				<p class="description">Creative Direction, web design and business planning for Vermont Information Consortium, a small web agency focussed on providing websites and online services for Vermont State Government.</p>
+				<p class="description">Creative Direction, web design and business planning for Vermont Information Consortium, a web agency focussed on providing websites and online services for Vermont State Government.</p>
 			</li>
 			<li>
 				<span class="date">2011-2015</span>
@@ -55,21 +56,33 @@ layout: default
 		</ul>
 	</section>
 		
-	<section class="education">
+	<section id="education">
 		<h2 class="section-title">Education</h2>
 		<ul class="entries">
-			<li><span class="date">1996-2000</span> Master of Communication Studies - <a href="http://vub.be">VUB</a></li>
+			<li><span class="date">1996-2000</span> Master of Communication Studies - <a href="http://vub.be">VUB, University of Brussels</a></li>
 		</ul>
 	</section>
 
-	<section class="skills">
+	<section id="skills">
 		<h2 class="section-title">Skills</h2>
 		<ul class="entries">
-			<li>Web Design: Requirements gathering, solution proposals, wireframes, mockups, graphic components, etc.</li>
-			<li>Development: Standards based and section 508 compliant HTML and CSS(SASS), PHP, some Javascript.</li>
-			<li>Platforms and technologies: WordPress, Drupal, Jekyll, Symfony, etc. (Configuration, Theming and Administration)</li>
-			<li>Adobe Creative Suite: Photoshop, Illustrator, Fireworks, some Flash and Indesign</li>
-			<li>Various: Sketch, Git, LAMP, photography, logo design and branding.</li>
+			<li><strong>Web Design:</strong> Requirements gathering, solution proposals, web application design, mobile first and future friendly design, etc.</li>
+			<li><strong>UX/UI:</strong> Best Practices, brand and voice enhancing UX, story driven UI,  wireframes, mockups, graphic components, user research, a/b testing</li>
+			<li><strong>Development:</strong> Standards based and section 508 compliant HTML and CSS(SASS), some PHP, some Javascript</li>
+			<li><strong>Platforms:</strong> WordPress, Drupal, Jekyll, Symfony, etc. (Configuration, Theming and Administration)</li>
+			<li><strong>Libraries and technologies:</strong> Bourbon, Neat, Compass, Twig, Yaml, Markdown, etc.</li>
+			<li><strong>Adobe Creative Suite:</strong> Photoshop, Illustrator, Fireworks, some Flash and Indesign</li>
+			<li><strong>Other:</strong> Sketch, Git, LAMP, photography, logo design and branding</li>
+			<li><strong>Always Learning! Currently:</strong> Drupal 8, Knockout, React, Handlebars</li>
+		</ul>
+	</section>
+	
+		<section id="personal">
+		<h2 class="section-title">Personal</h2>
+		<p>When I'm not working, I enjoy spending time with my amazing wife <a href="http://lauramacchia.com">Laura</a>, and our two-and-a-half year old son Felix. We enjoy all kinds of outdoor activities here in Vermont. I'm originally from Belgium, and yes, the chocolate and beer cliches apply. In 2005 I met Laura at a party in New York City and, as they say, the rest is history.</p>
+		<ul class="entries">
+			<li><strong>Currently Reading:</strong><br/> Shogun (James Clavell), Rework (Jason Fried & David Heinemeier Hansson), You Are My Favorite Client (Mike Monteiro)</li>
+			<li><strong>Currently Watching:</strong><br/> Game of Thrones, and our never ending Netflix queue of movies.</li>
 		</ul>
 	</section>
 <!--
@@ -87,7 +100,7 @@ layout: default
 		</p>
 -->
 		
-	<section class="contact">
+	<section id="contact">
 		<h2 class="section-title">Contact</h2>
 		<p>For more frequent updates, or if you'd like to get in touch with me:</p>
 	  		<ul class="social-media-list">
