rough responsive styles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: home
 <!-- <div class="wrapper"> -->
 	
 	<section id="profile">
-		<h2 class="page-title">Frederik Van Geloven</h2>
+		<h2 class="page-title">Frederik Van&nbsp;Geloven</h2>
 		<div class="info">
 			<p>designer - creative director</p>
 			<p class="type">& front-end developer</p>
@@ -40,18 +40,18 @@ layout: home
 		<ul>
 			<li>
 				<span class="date">2015-present</span>
-				<h3>Creative Director - <a class="company" href="http://vermontegov.com">Vermont Information Consortium</a></h3>
-				<p class="description">Creative Direction, web design and business planning for Vermont Information Consortium, a web agency focussed on providing websites and online services for Vermont State Government.</p>
+				<h3>Creative Director - <a class="company" href="http://vermontegov.com">Vermont&nbsp;Information&nbsp;Consortium</a></h3>
+				<p class="description">Creative Direction, web design and business planning for Vermont Information Consortium, a web agency focussed on providing websites and online services for Vermont&nbsp;State&nbsp;Government.</p>
 			</li>
 			<li>
 				<span class="date">2011-2015</span>
-				<h3>Creative Services Project Manager - <a class="company" href="http://vermontegov.com">Vermont Information Consortium</a></h3>
-				<p class="description">Web design, front-end development and CMS administration/configuration for Vermont Information Consortium.</p>
+				<h3>Creative Services Project Manager - <a class="company" href="http://vermontegov.com">Vermont&nbsp;Information&nbsp;Consortium</a></h3>
+				<p class="description">Web design, front-end development and CMS administration/configuration for Vermont&nbsp;Information&nbsp;Consortium.</p>
 			</li>
 			<li>
 				<span class="date">2007-2011</span>
-				<h3>Freelance Web Designer/Developer - <a class="company" href="http://madebyfred.com">Made by Fred</a></h3>
-				<p class="description">Full stack Web design and development for my personal web agency.</p>
+				<h3>Freelance Web Designer/Developer - <a class="company" href="http://madebyfred.com">Made&nbsp;by&nbsp;Fred</a></h3>
+				<p class="description">Full stack Web design and development for my personal web&nbsp;agency.</p>
 			</li>
 		</ul>
 	</section>
@@ -59,30 +59,33 @@ layout: home
 	<section id="education">
 		<h2 class="section-title">Education</h2>
 		<ul class="entries">
-			<li><span class="date">1996-2000</span> Master of Communication Studies - <a href="http://vub.be">VUB, University of Brussels</a></li>
+			<li>
+			  <span class="date">1996-2000</span>
+        <h3>Master of Communication Studies - <a href="http://vub.be">VUB, University of Brussels</a></h3>
+      </li>
 		</ul>
 	</section>
 
 	<section id="skills">
 		<h2 class="section-title">Skills</h2>
 		<ul class="entries">
-			<li><strong>Web Design:</strong> Requirements gathering, solution proposals, web application design, mobile first and future friendly design, etc.</li>
-			<li><strong>UX/UI:</strong> Best Practices, brand and voice enhancing UX, story driven UI,  wireframes, mockups, graphic components, user research, a/b testing</li>
-			<li><strong>Development:</strong> Standards based and section 508 compliant HTML and CSS(SASS), some PHP, some Javascript</li>
-			<li><strong>Platforms:</strong> WordPress, Drupal, Jekyll, Symfony, etc. (Configuration, Theming and Administration)</li>
-			<li><strong>Libraries and technologies:</strong> Bourbon, Neat, Compass, Twig, Yaml, Markdown, etc.</li>
-			<li><strong>Adobe Creative Suite:</strong> Photoshop, Illustrator, Fireworks, some Flash and Indesign</li>
-			<li><strong>Other:</strong> Sketch, Git, LAMP, photography, logo design and branding</li>
-			<li><strong>Always Learning! Currently:</strong> Drupal 8, Knockout, React, Handlebars</li>
+			<li><h3>Web Design:</h3> Requirements gathering, solution proposals, web application design, mobile first and future friendly design, etc.</li>
+			<li><h3>UX/UI:</h3> Best Practices, brand and voice enhancing UX, story driven UI,  wireframes, mockups, graphic components, user research, a/b testing</li>
+			<li><h3>Development:</h3> Standards based and section 508 compliant HTML and CSS(SASS), some PHP, some Javascript</li>
+			<li><h3>Platforms:</h3> WordPress, Drupal, Jekyll, Symfony, etc. (Configuration, Theming and Administration)</li>
+			<li><h3>Libraries and technologies:</h3> Bourbon, Neat, Compass, Twig, Yaml, Markdown, etc.</li>
+			<li><h3>Adobe Creative Suite:</h3> Photoshop, Illustrator, Fireworks, some Flash and Indesign</li>
+			<li><h3>Other:</h3> Sketch, Git, LAMP, photography, logo design and branding</li>
+			<li><h3>Always Learning! Currently:</h3> Drupal 8, Knockout, React, Handlebars</li>
 		</ul>
 	</section>
 	
 		<section id="personal">
 		<h2 class="section-title">Personal</h2>
-		<p>When I'm not working, I enjoy spending time with my amazing wife <a href="http://lauramacchia.com">Laura</a>, and our two-and-a-half year old son Felix. We enjoy all kinds of outdoor activities here in Vermont. I'm originally from Belgium, and yes, the chocolate and beer cliches apply. In 2005 I met Laura at a party in New York City and, as they say, the rest is history.</p>
+		<p>When I'm not working, I enjoy spending time with my amazing wife <a href="http://lauramacchia.com">Laura</a>, and our two-and-a-half year old son Felix. We enjoy all kinds of outdoor activities here in Vermont. I'm originally from Belgium, and yes, the chocolate and beer cliches&nbsp;apply.</p>
 		<ul class="entries">
-			<li><strong>Currently Reading:</strong><br/> Shogun (James Clavell), Rework (Jason Fried & David Heinemeier Hansson), You Are My Favorite Client (Mike Monteiro)</li>
-			<li><strong>Currently Watching:</strong><br/> Game of Thrones, and our never ending Netflix queue of movies.</li>
+			<li><h3>Currently Reading:</h3>Shogun (James Clavell), Rework (Jason Fried & David Heinemeier Hansson), You Are My Favorite Client (Mike&nbsp;Monteiro)</li>
+			<li><h3>Currently Watching:</h3>Game of Thrones, and our never ending Netflix queue of&nbsp;movies.</li>
 		</ul>
 	</section>
 <!--
@@ -102,7 +105,7 @@ layout: home
 		
 	<section id="contact">
 		<h2 class="section-title">Contact</h2>
-		<p>For more frequent updates, or if you'd like to get in touch with me:</p>
+		<p>For more frequent updates, or if you'd like to get in touch with&nbsp;me:</p>
 	  		<ul class="social-media-list">
 	          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
 	          {% if site.twitter_username %}
