--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ layout: home
 <!-- <div class="wrapper"> -->
 	
 	<section id="profile">
+    <img src="images/fall2015_square.jpg" alt="profile picture"/>
 		<h2 class="page-title">Frederik Van&nbsp;Geloven</h2>
 		<div class="info">
 			<p>designer - creative director</p>
 			<p class="type">& front-end developer</p>
-			<img src="images/fall2015_square.jpg" alt="profile picture"/>
 
 <!--
 			<ul>
@@ -16,6 +16,7 @@ layout: home
 				<li>creative director</li>
 			</ul>
 -->
+		</div>
 	</section>
 	
 	<section id="portfolio">
