--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ layout: home
 		</div>
 	</section>
 
+{% include skills.html %}
+
 	<section id="portfolio">
 		<h2 class="section-title">Portfolio</h2>
 		<ul class="entries">
