new portfolio content and new portfolio modal layout implemented, added first post about visual design too

--- a/test.html
+++ b/test.html
@@ -1,15 +1,18 @@
 ---
-layout: home
+layout: default
 ---
 
-<div class="test">
-  <div>&nbsp;</div>
-  <div>&nbsp;</div>
-  <div>&nbsp;</div>
-  <div>&nbsp;</div>
-  <div>&nbsp;</div>
-  <div>&nbsp;</div>
-  <div>&nbsp;</div>
-  <div>&nbsp;</div>
-  <div>&nbsp;</div>
+<div class="color-palette">
+  <div class="text-color">Text Color</div>
+  <div class="background-color">Background Color</div>
+  <div class="brand-color">Brand Color</div>
+  <div class="link-color">Link Color</div>
+  <div class="dark-blue">Dark Blue</div>
+  <div class="grey-color">Grey Color</div>
+  <div class="bleu-grey">Blue Grey</div>
+  <div class="blue-grey-light">Blue Grey</div>
+  <div class="grey-color-light">Grey Color Light</div>
+  <div class="grey-color-dark">Grey Color Dark</div>
+  <div class="emphasis-color">Emphasis Color</div>
+  <div class="emphasis-color-2">Emphasis Color 2</div>
 </div>
