manually adding new index file

--- a/index.html
+++ b/index.html
@@ -1,8 +1,90 @@
----
-layout: home
----
-<div class="wrapper">
-	<div class="home">
+<!DOCTYPE html>
 
-	</div>
-</div>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+
+    <title>Frederik Van Geloven — UX Design</title>
+    <meta name="description" content="Frederik Van Geloven is a user experience designer, this is his personal website.">
+    <meta name="author" content="Frederik Van Geloven">
+
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    <link rel="canonical" href="http://fredvg.com/">
+
+  </head>
+  <body id="page-top" class="home">
+
+    <header>
+      <h1 class="page-title">Frederik <span>Van&nbsp;Geloven</span>
+      <span class="role">Experience Designer</span></h1>
+    </header>
+
+    <div class="page-content">
+
+      <section id="about">
+        <h2>About</h2>
+        <p>As a UX/UI designer, I live and breathe digital design.</p>
+        <p>Human-centered design always reveals interesting and complex needs. I love the challenge this poses and embrace the uncertainty it brings. The work is never done, and neither is the learning, but that’s exactly why I love this job.</p>
+      </section>
+
+      <section id="work">
+        <h2>Work</h2>
+        <h3>Currently</h3>
+          <a href="https://communicatehealth.com">CommunicateHealth</a>
+        <h3>Previously</h3>
+        <a href="https://vermont.gov">Vermont&nbsp;Information&nbsp;Consortium</a>
+      </section>
+
+      <section id="contact">
+        <h2>Contact</h2>
+        <ul>
+          <li><a href="https://madebyfred.tumblr.com/">Tumblr</a></li>
+          <li><a href="https://twitter.com/frederikvg">Twitter</a></li>
+          <li><a href="https://www.linkedin.com/in/fredvg/">LinkedIn</a></li>
+          <li><a href="https://github.com/fredvg">Github</a></li>
+          <li><a href="https://www.fastcompany.com/90514016/mark-zuckerberg-is-on-the-wrong-side-of-history">Facebook</a></li>
+        </ul>
+      </section>
+
+      <section id="personal">
+        <h2 class="section-title">Personal</h2>
+        <p>When I'm not working, I enjoy spending time with my amazing wife <a href="http://pvhomestaging.com">Laura</a>, and our 6 year old son Felix. We enjoy all kinds of outdoor&nbsp;activities.</p>
+        <p>I'm originally from Belgium, but I’ve lived in the U.S. since 2007. Before you ask, yes, the chocolate and beer cliches still&nbsp;apply.</p>
+        <h3>Reading</h3>
+          <ul>
+            <li>Sapiens: A&nbsp;Brief&nbsp;History&nbsp;of&nbsp;Humankind (Yuval&nbsp;Noah&nbsp;Harari)</li>
+            <li>Beastie&nbsp;Boys&nbsp;Book (Michael&nbsp;Diamond and Adam&nbsp;Horovitz)</li>
+          </ul>
+        <h3>Watching</h3>
+          <ul>
+            <li>I&nbsp;Know&nbsp;This&nbsp;Much&nbsp;Is&nbsp;True (HBO)</li>
+          </ul>
+        <h3>Learning:</h3>
+          <ul>
+            <li>WordPress&nbsp;5 and Gutenberg</li>
+            <li>Everyday&nbsp;Information&nbsp;Architecture (Lisa&nbsp;Maria&nbsp;Marquis)</li>
+            <li>How to be (more) anti-racist</li>
+          </ul>
+      </section>
+    </div>
+
+    <footer class="site-footer">
+      <span class="copyright">Copyright &copy; 2020 | Frederik&nbsp;Van&nbsp;Geloven</span>
+    </footer>
+
+   <!-- GA Tracking -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-16904602-4', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+
+  </body>
+
+</html>
