adding viewport width tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Frederik Van Geloven — UX Design</title>
     <meta name="description" content="Frederik Van Geloven is a user experience designer, this is his personal website.">
     <meta name="author" content="Frederik Van Geloven">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@700&display=swap" rel="stylesheet">
