--- a/index.html
+++ b/index.html
@@ -55,23 +55,25 @@
         <h3>Reading</h3>
           <ul>
             <li>Sapiens: A&nbsp;Brief&nbsp;History&nbsp;of&nbsp;Humankind (Yuval&nbsp;Noah&nbsp;Harari)</li>
-            <li>Beastie&nbsp;Boys&nbsp;Book (Michael&nbsp;Diamond and Adam&nbsp;Horovitz)</li>
+            <li>Visualizing&nbsp;Health&nbsp;and&nbsp;Healthcare&nbsp;Data (Katherine&nbsp;Rowell, Lindsay&nbsp;Betzendahl, and Cambria&nbsp;Brown)</li>
+            <li>Colorless&nbsp;Tsukuru&nbsp;Tazaki and His&nbsp;Years&nbsp;of&nbsp;Pilgrimage (Haruki&nbsp;Murakami)
           </ul>
         <h3>Watching</h3>
           <ul>
-            <li>I&nbsp;Know&nbsp;This&nbsp;Much&nbsp;Is&nbsp;True (HBO)</li>
+            <li>Professor&nbsp;T (PBS)</li>
+            <li>The&nbsp;Detectorists (BBC)</li>
           </ul>
         <h3>Learning:</h3>
           <ul>
             <li>WordPress&nbsp;5 and Gutenberg</li>
-            <li>Everyday&nbsp;Information&nbsp;Architecture (Lisa&nbsp;Maria&nbsp;Marquis)</li>
+            <li>How to be a better presenter</li>
             <li>How to be (more) anti-racist</li>
           </ul>
       </section>
     </div>
 
     <footer class="site-footer">
-      <span class="copyright">Copyright &copy; 2020 | Frederik&nbsp;Van&nbsp;Geloven</span>
+      <span class="copyright">Copyright &copy; 2021 | Frederik&nbsp;Van&nbsp;Geloven</span>
     </footer>
 
    <!-- GA Tracking -->
