--- a/index.html
+++ b/index.html
@@ -40,34 +40,34 @@
       <section id="contact">
         <h2>Contact</h2>
         <ul>
+          <li><a href="https://www.linkedin.com/in/fredvg/">LinkedIn</a></li>          
           <li><a href="https://madebyfred.tumblr.com/">Tumblr</a></li>
           <li><a href="https://twitter.com/frederikvg">Twitter</a></li>
-          <li><a href="https://www.linkedin.com/in/fredvg/">LinkedIn</a></li>
-          <li><a href="https://github.com/fredvg">Github</a></li>
-          <li><a href="https://www.fastcompany.com/90514016/mark-zuckerberg-is-on-the-wrong-side-of-history">Facebook</a></li>
         </ul>
       </section>
 
       <section id="personal">
         <h2 class="section-title">Personal</h2>
-        <p>When I'm not working, I enjoy spending time with my amazing wife <a href="http://pvhomestaging.com">Laura</a>, and our 6 year old son Felix. We enjoy all kinds of outdoor&nbsp;activities.</p>
+        <p>When I'm not working, I enjoy spending time with my amazing wife <a href="http://pvhomestaging.com">Laura</a>, and our 8 year old son Felix. We enjoy all kinds of outdoor&nbsp;activities.</p>
         <p>I'm originally from Belgium, but I’ve lived in the U.S. since 2007. Before you ask, yes, the chocolate and beer cliches still&nbsp;apply.</p>
         <h3>Reading</h3>
           <ul>
             <li>Sapiens: A&nbsp;Brief&nbsp;History&nbsp;of&nbsp;Humankind (Yuval&nbsp;Noah&nbsp;Harari)</li>
             <li>Visualizing&nbsp;Health&nbsp;and&nbsp;Healthcare&nbsp;Data (Katherine&nbsp;Rowell, Lindsay&nbsp;Betzendahl, and Cambria&nbsp;Brown)</li>
-            <li>Colorless&nbsp;Tsukuru&nbsp;Tazaki and His&nbsp;Years&nbsp;of&nbsp;Pilgrimage (Haruki&nbsp;Murakami)
+            <li>Apeirogon (Colum&nbsp;McCann)</li>
           </ul>
-        <h3>Watching</h3>
+        <h3>Listening</h3>
+        <p>Catch me listening to embarrasing <a href="https://open.spotify.com/user/madebyfred?si=576d8be72e5b46be">80s and 90s music on Spotify</a>.
           <ul>
-            <li>Professor&nbsp;T (PBS)</li>
-            <li>The&nbsp;Detectorists (BBC)</li>
+            <li>The French&nbsp;Dispatch (Alexandre&nbsp;Desplat)</li>
+            <li>Black to the&nbsp;Future (Sons&nbsp;of&nbsp;Kemet)</li>
+            <li>Winter is for&nbsp;Lovers (Ben&nbsp;Harper)</li>
           </ul>
         <h3>Learning:</h3>
           <ul>
-            <li>WordPress&nbsp;5 and Gutenberg</li>
-            <li>How to be a better presenter</li>
-            <li>How to be (more) anti-racist</li>
+            <li>Advanced Figma (ask me about Auto&nbsp;Layout)</li>
+            <li>How to not suck at&nbsp;guitar</li>
+            <li>How to be (more)&nbsp;anti-racist</li>
           </ul>
       </section>
     </div>
