--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <li>Apeirogon (Colum&nbsp;McCann)</li>
           </ul>
         <h3>Listening</h3>
-        <p>Catch me listening to embarrasing <a href="https://open.spotify.com/user/madebyfred?si=576d8be72e5b46be">80s and 90s music on Spotify</a>.
+        <p>Catch me listening to embarrasing <a href="https://open.spotify.com/user/madebyfred?si=576d8be72e5b46be">80s and 90s music on Spotify</a>.</p>
           <ul>
             <li>The French&nbsp;Dispatch (Alexandre&nbsp;Desplat)</li>
             <li>Black to the&nbsp;Future (Sons&nbsp;of&nbsp;Kemet)</li>
