--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="interest-column">
         <h3>Reading</h3>
         <ul>
-          <li>Apeirogon (Colum McCann)</li>
+          <li>The Sympathizer (Viet Thanh Nguyen)</li>
           <li>Sapiens: A Brief History of Humankind (Yuval Noah Harari)</li>
           <li>Visualizing Health and Healthcare Data (Katherine Rowell, Lindsay Betzendahl, and Cambria Brown)</li>
         </ul>
@@ -53,7 +53,7 @@
       <div class="interest-column">
         <h3>Learning</h3>
         <ul>
-          <li>Advanced Figma</li>
+          <li>Accessible Data Visualization</li>
           <li>Guitar</li>
           <li>Webflow</li>
         </ul>
@@ -70,7 +70,7 @@
     </section>
     <section id="contact">
       <h2>Get in touch</h2>
-      <p>The easiest way to send me a message is probably through <a href="https://linkedin.com/fredvg">LinkedIn</a>. As an added bonus you get to see what I look like there.</p>
+      <p>The easiest way to send me a message is through <a href="https://www.linkedin.com/in/fredvg">LinkedIn</a>. As an added bonus you get to see what I look like there.</p>
       <p>If you don't have a LinkedIn account, you'll have to get creative and figure out how to email me at communicatehealth.com. I know, that's not very user-friendly, but I need to make sure you are not a robot. Hint: most people call me "Fred".</p>
     </section>
 </body>
