--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <div class="interest-column">
         <h3>Reading</h3>
         <ul>
-          <li>The Sympathizer (Viet Thanh Nguyen)</li>
-          <li>Sapiens: A Brief History of Humankind (Yuval Noah Harari)</li>
+          <li>Acid for the Children (Flea)</li>
+          <li>Thinking with type (Ellen Lupton)</li>
           <li>Visualizing Health and Healthcare Data (Katherine Rowell, Lindsay Betzendahl, and Cambria Brown)</li>
         </ul>
       </div>
@@ -55,16 +55,16 @@
         <ul>
           <li>Accessible Data Visualization</li>
           <li>Guitar</li>
-          <li>Webflow</li>
+          <li>Advanced Product Design Strategy</li>
         </ul>
       </div>
       <div class="interest-column">
         <h3>Listening</h3>
         Catch me listening to embarrasing <a href="https://open.spotify.com/user/madebyfred">80s and 90s music on Spotify</a>.
         <ul>
-          <li>The French Dispatch (Alexandre Desplat)</li>
-          <li>Black To The Future (Sons of Kemet)</li>
-          <li>Winter Is For Lovers (Ben Harper)</li>
+          <li>Wall of Eyes (The Smile)</li>
+          <li>Fantômes... Futurs (Kham Meslien)</li>
+          <li>SUCKER (IAN SWEET)</li>
         </ul>
       </div>
     </section>
