--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
       <div class="interest-column">
         <h3>Reading</h3>
         <ul>
-          <li>Acid for the Children (Flea)</li>
+          <li>De acht bergen (Paolo Cognetti)</li>
           <li>Thinking with type (Ellen Lupton)</li>
-          <li>Visualizing Health and Healthcare Data (Katherine Rowell, Lindsay Betzendahl, and Cambria Brown)</li>
+          <li>Wanderlust (Reid Mitenbuler)</li>
         </ul>
       </div>
       <div class="interest-column">
         <h3>Learning</h3>
         <ul>
-          <li>Accessible Data Visualization</li>
+          <li>11ty</li>
           <li>Guitar</li>
           <li>Advanced Product Design Strategy</li>
         </ul>
@@ -62,9 +62,9 @@
         <h3>Listening</h3>
         Catch me listening to embarrasing <a href="https://open.spotify.com/user/madebyfred">80s and 90s music on Spotify</a>.
         <ul>
-          <li>Wall of Eyes (The Smile)</li>
+          <li>Nobody Loves You More (Kim Deal)</li>
           <li>Fantômes... Futurs (Kham Meslien)</li>
-          <li>SUCKER (IAN SWEET)</li>
+          <li>I Put A Spell On You (Nina Simone)</li>
         </ul>
       </div>
     </section>
